--- a/navbar/navbar.css
+++ b/navbar/navbar.css
@@ -9,9 +9,8 @@ body {
 
    background-color: #9e2548;
 }
-.navbar p{
-    font-size: 13px;
-    width: 25%;
+.left-nav{
+    width: 20%;
 }
 .top-bar{
     display: flex;
