--- a/navbar/navbar.css
+++ b/navbar/navbar.css
@@ -80,7 +80,7 @@ body {
 }
 
 .nav-item:hover {
-    color: #ff6b6b;
+    color: #9e2548;
 }
 
 /* Dropdown Styles */
@@ -111,7 +111,7 @@ body {
 
 .dropdown-item:hover {
     background: #fff5f5;
-    color: #ff6b6b;
+    color: #c74e71;
     padding-left: 20px;
 }
 
@@ -119,4 +119,20 @@ body {
 .nav-item i {
     margin-left: 5px;
     font-size: 12px;
+}
+.fa-user
+{
+    color: white;
+}
+.fa-regular:hover,
+.fa-solid:hover{
+    color: #d989a0;
+    cursor: pointer;
+
+
+}
+.fa-sign-out-alt{
+   
+    color: white;
+
 }
