--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,13 @@ html, body {
     margin-bottom: 20px;
 }
 
+.brands-scroll-wrapper {
+    width:1000px;
+    height: 120px; 
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+
 .brands-scroll-container {
     display: flex;
     align-items: center;
@@ -41,19 +48,20 @@ html, body {
 
 .brands-scroll-container::-webkit-scrollbar {
     display: none; /* Chrome */
+    padding: 10px 10px;
 }
 
 .brand-item {
     flex: 0 0 auto;
     width: 120px;
     height: 120px;
-    background-color: #f1f1f1;
+    /*background-color: #ffffff;*/
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
     font-weight: bold;
-    box-shadow: 0 0 8px rgba(0,0,0,0.1);
+    /*box-shadow: 0 0 8px rgba(0,0,0,0.1);*/
 }
 
 .arrow-btn {
