made it work to add to cart and then proceed to order, to see the user his order history and order status, also the admin to see the orders and to update its statuses

--- a/css/profile.css
+++ b/css/profile.css
@@ -65,7 +65,7 @@ button[type="submit"]:hover {
     height: 30px;
 }
 
-a {
+.fa-arrow-left {
     text-decoration: none;
     color: #111;
     font-size: 18px;
